init/k8s/svc.tmpl.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}
  namespace: ${K8S_NAMESPACE}
  labels:
    app: ${APP_NAME}
spec:
  type: ClusterIP
  selector:
    app: ${APP_NAME}
  ports:
  - protocol: TCP
    port: ${CONTAINER_PORT}
    targetPort: ${CONTAINER_PORT}
    name: http
